// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Edge Cases should handle empty children gracefully 1`] = `
<button
  aria-disabled="false"
  class="
        inline-flex items-center justify-center
        font-medium rounded-md border
        focus:outline-none focus:ring-2 focus:ring-offset-2
        transition-colors duration-200
        
        bg-blue-600 hover:bg-blue-700 focus:ring-blue-500 
        dark:bg-blue-500 dark:hover:bg-blue-600 dark:focus:ring-blue-400
        text-white border-transparent
      
        px-4 py-2 text-sm
        
        cursor-pointer
        
      "
>
  <span
    class=""
  />
</button>
`;

exports[`Button Component Snapshots should match snapshot for danger variant 1`] = `
<button
  aria-disabled="false"
  class="
        inline-flex items-center justify-center
        font-medium rounded-md border
        focus:outline-none focus:ring-2 focus:ring-offset-2
        transition-colors duration-200
        
        bg-red-600 hover:bg-red-700 focus:ring-red-500
        dark:bg-red-500 dark:hover:bg-red-600 dark:focus:ring-red-400
        text-white border-transparent
      
        px-4 py-2 text-sm
        
        cursor-pointer
        
      "
>
  <span
    class=""
  >
    Danger Button
  </span>
</button>
`;

exports[`Button Component Snapshots should match snapshot for extra large size 1`] = `
<button
  aria-disabled="false"
  class="
        inline-flex items-center justify-center
        font-medium rounded-md border
        focus:outline-none focus:ring-2 focus:ring-offset-2
        transition-colors duration-200
        
        bg-blue-600 hover:bg-blue-700 focus:ring-blue-500 
        dark:bg-blue-500 dark:hover:bg-blue-600 dark:focus:ring-blue-400
        text-white border-transparent
      
        px-6 py-3 text-base
        
        cursor-pointer
        
      "
>
  <span
    class=""
  >
    Extra Large Button
  </span>
</button>
`;

exports[`Button Component Snapshots should match snapshot for extra small size 1`] = `
<button
  aria-disabled="false"
  class="
        inline-flex items-center justify-center
        font-medium rounded-md border
        focus:outline-none focus:ring-2 focus:ring-offset-2
        transition-colors duration-200
        
        bg-blue-600 hover:bg-blue-700 focus:ring-blue-500 
        dark:bg-blue-500 dark:hover:bg-blue-600 dark:focus:ring-blue-400
        text-white border-transparent
      
        px-2.5 py-1.5 text-xs
        
        cursor-pointer
        
      "
>
  <span
    class=""
  >
    Extra Small Button
  </span>
</button>
`;

exports[`Button Component Snapshots should match snapshot for ghost variant 1`] = `
<button
  aria-disabled="false"
  class="
        inline-flex items-center justify-center
        font-medium rounded-md border
        focus:outline-none focus:ring-2 focus:ring-offset-2
        transition-colors duration-200
        
        bg-transparent hover:bg-gray-100 focus:ring-gray-500
        dark:hover:bg-gray-800 dark:focus:ring-gray-400
        text-gray-700 dark:text-gray-300 border-transparent
        hover:text-gray-900 dark:hover:text-white
      
        px-4 py-2 text-sm
        
        cursor-pointer
        
      "
>
  <span
    class=""
  >
    Ghost Button
  </span>
</button>
`;

exports[`Button Component Snapshots should match snapshot for large size 1`] = `
<button
  aria-disabled="false"
  class="
        inline-flex items-center justify-center
        font-medium rounded-md border
        focus:outline-none focus:ring-2 focus:ring-offset-2
        transition-colors duration-200
        
        bg-blue-600 hover:bg-blue-700 focus:ring-blue-500 
        dark:bg-blue-500 dark:hover:bg-blue-600 dark:focus:ring-blue-400
        text-white border-transparent
      
        px-4 py-2 text-base
        
        cursor-pointer
        
      "
>
  <span
    class=""
  >
    Large Button
  </span>
</button>
`;

exports[`Button Component Snapshots should match snapshot for medium size 1`] = `
<button
  aria-disabled="false"
  class="
        inline-flex items-center justify-center
        font-medium rounded-md border
        focus:outline-none focus:ring-2 focus:ring-offset-2
        transition-colors duration-200
        
        bg-blue-600 hover:bg-blue-700 focus:ring-blue-500 
        dark:bg-blue-500 dark:hover:bg-blue-600 dark:focus:ring-blue-400
        text-white border-transparent
      
        px-4 py-2 text-sm
        
        cursor-pointer
        
      "
>
  <span
    class=""
  >
    Medium Button
  </span>
</button>
`;

exports[`Button Component Snapshots should match snapshot for outline variant 1`] = `
<button
  aria-disabled="false"
  class="
        inline-flex items-center justify-center
        font-medium rounded-md border
        focus:outline-none focus:ring-2 focus:ring-offset-2
        transition-colors duration-200
        
        bg-transparent hover:bg-gray-50 focus:ring-blue-500
        dark:hover:bg-gray-800 dark:focus:ring-blue-400
        text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600
        hover:text-gray-900 dark:hover:text-white
      
        px-4 py-2 text-sm
        
        cursor-pointer
        
      "
>
  <span
    class=""
  >
    Outline Button
  </span>
</button>
`;

exports[`Button Component Snapshots should match snapshot for primary variant 1`] = `
<button
  aria-disabled="false"
  class="
        inline-flex items-center justify-center
        font-medium rounded-md border
        focus:outline-none focus:ring-2 focus:ring-offset-2
        transition-colors duration-200
        
        bg-blue-600 hover:bg-blue-700 focus:ring-blue-500 
        dark:bg-blue-500 dark:hover:bg-blue-600 dark:focus:ring-blue-400
        text-white border-transparent
      
        px-4 py-2 text-sm
        
        cursor-pointer
        
      "
>
  <span
    class=""
  >
    Primary Button
  </span>
</button>
`;

exports[`Button Component Snapshots should match snapshot for secondary variant 1`] = `
<button
  aria-disabled="false"
  class="
        inline-flex items-center justify-center
        font-medium rounded-md border
        focus:outline-none focus:ring-2 focus:ring-offset-2
        transition-colors duration-200
        
        bg-gray-600 hover:bg-gray-700 focus:ring-gray-500
        dark:bg-gray-500 dark:hover:bg-gray-600 dark:focus:ring-gray-400
        text-white border-transparent
      
        px-4 py-2 text-sm
        
        cursor-pointer
        
      "
>
  <span
    class=""
  >
    Secondary Button
  </span>
</button>
`;

exports[`Button Component Snapshots should match snapshot for small size 1`] = `
<button
  aria-disabled="false"
  class="
        inline-flex items-center justify-center
        font-medium rounded-md border
        focus:outline-none focus:ring-2 focus:ring-offset-2
        transition-colors duration-200
        
        bg-blue-600 hover:bg-blue-700 focus:ring-blue-500 
        dark:bg-blue-500 dark:hover:bg-blue-600 dark:focus:ring-blue-400
        text-white border-transparent
      
        px-3 py-2 text-sm
        
        cursor-pointer
        
      "
>
  <span
    class=""
  >
    Small Button
  </span>
</button>
`;

exports[`Button Component Snapshots should match snapshot for success variant 1`] = `
<button
  aria-disabled="false"
  class="
        inline-flex items-center justify-center
        font-medium rounded-md border
        focus:outline-none focus:ring-2 focus:ring-offset-2
        transition-colors duration-200
        
        bg-green-600 hover:bg-green-700 focus:ring-green-500
        dark:bg-green-500 dark:hover:bg-green-600 dark:focus:ring-green-400
        text-white border-transparent
      
        px-4 py-2 text-sm
        
        cursor-pointer
        
      "
>
  <span
    class=""
  >
    Success Button
  </span>
</button>
`;

exports[`Button Component Snapshots should match snapshot in disabled state 1`] = `
<button
  aria-disabled="true"
  class="
        inline-flex items-center justify-center
        font-medium rounded-md border
        focus:outline-none focus:ring-2 focus:ring-offset-2
        transition-colors duration-200
        
        bg-blue-600 hover:bg-blue-700 focus:ring-blue-500 
        dark:bg-blue-500 dark:hover:bg-blue-600 dark:focus:ring-blue-400
        text-white border-transparent
      
        px-4 py-2 text-sm
        
        opacity-50 cursor-not-allowed
        
      "
  disabled=""
>
  <span
    class=""
  >
    Disabled Button
  </span>
</button>
`;

exports[`Button Component Snapshots should match snapshot in loading state 1`] = `
<button
  aria-disabled="true"
  class="
        inline-flex items-center justify-center
        font-medium rounded-md border
        focus:outline-none focus:ring-2 focus:ring-offset-2
        transition-colors duration-200
        
        bg-blue-600 hover:bg-blue-700 focus:ring-blue-500 
        dark:bg-blue-500 dark:hover:bg-blue-600 dark:focus:ring-blue-400
        text-white border-transparent
      
        px-4 py-2 text-sm
        
        opacity-50 cursor-not-allowed
        
      "
  disabled=""
>
  <svg
    aria-hidden="true"
    class="animate-spin h-4 w-4"
    fill="none"
    viewBox="0 0 24 24"
  >
    <circle
      class="opacity-25"
      cx="12"
      cy="12"
      r="10"
      stroke="currentColor"
      stroke-width="4"
    />
    <path
      class="opacity-75"
      d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
      fill="currentColor"
    />
  </svg>
  <span
    class="ml-2"
  >
    Loading Button
  </span>
</button>
`;

exports[`Button Component Snapshots should match snapshot with custom className 1`] = `
<button
  aria-disabled="false"
  class="
        inline-flex items-center justify-center
        font-medium rounded-md border
        focus:outline-none focus:ring-2 focus:ring-offset-2
        transition-colors duration-200
        
        bg-blue-600 hover:bg-blue-700 focus:ring-blue-500 
        dark:bg-blue-500 dark:hover:bg-blue-600 dark:focus:ring-blue-400
        text-white border-transparent
      
        px-4 py-2 text-sm
        
        cursor-pointer
        custom-class
      "
>
  <span
    class=""
  >
    Custom Button
  </span>
</button>
`;
